# JamJar

./: LICENSE  LICENSE.md  README.md  package.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  release.yml
docs/man/: jamjar-add.1  jamjar-auth.1  jamjar-config.1  jamjar-diff.1  jamjar-dump.1  jamjar-list.1  jamjar-pull.1  jamjar-push.1  jamjar-rm.1  jamjar-stats.1  jamjar.1
jamjar/: __init__.py  config.py  database.py  spotify.py
jamjar/cli/: __init__.py  add.py  auth.py  export.py  list.py  playlist.py  remove.py  sync.py  update.py
rpm_src/: jamjar
src/jamjar/: __init__.py  config.py  database.py  dataclasses.py  spotify.py  utils.py
src/jamjar/cli/: __init__.py  add.py  auth.py  diff.py  dump.py  export.py  list.py  pull.py  push.py  remove.py  rm.py  stats.py  sync.py  update.py
src/jamjar/core/: __init__.py  config.py  database.py  dataclasses.py  spotify.py
src/jamjar/core/managers/: __init__.py  add.py  auth.py  diff.py  dump.py  list.py  pull.py  push.py  rm.py  stats.py
src/scripts/: migrate_db.py
